2023-2024/Docker/TP/_EXO/kubernetes/ingress/antoine/6.1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-apache
  labels:
    app: app-apache
spec:
  containers:
  - name: ctn-apache
    image: httpd
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: web-nginx
  labels:
    app: app-nginx
spec:
  containers:
  - name: ctn-nginx
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-apache
spec:
  selector:
    app: app-apache
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: app-nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
