2023-2024/Docker/TP/_EXO/kubernetes/ingress/antoine/6.1_-_Ingress_Services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
spec:
  rules:
  - host: apache.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-apache
            port:
              number: 8080
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx
            port:
              number: 8080
  ingressClassName: nginx
